Adding bakground and heading

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,3 +1,9 @@
+<body>
+  <header>
+  <h1>Hi, I'm Rachael</h1>
+</header>
+
+
 ---
 pageable: true
 per_page: 10
@@ -22,3 +28,4 @@ per_page: 10
     <p><%= link_to 'Next page', next_page %></p>
   <% end %>
 <% end %>
+</body>
