--- a/source/layout.erb
+++ b/source/layout.erb
@@ -5,8 +5,9 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
     <title>Blog Title<%= ' - ' + current_article.title unless current_article.nil? %></title>
     <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
-    <%= stylesheet_link_tag "normalize", "all" %>
-    <%= javascript_include_tag  "all" %>
+    <link href="../stylesheets/all.css" rel="stylesheet" type="text/css" />
+    <link href="../stylesheets/normalize.css" rel="stylesheet" type="text/css" />
+    <script src="../javascripts/all.js" type="text/javascript"></script>
   </head>
   <body>
     
