--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,7 +1,25 @@
 <body>
-  <header>
-  <h1>Hi, I'm Rachael</h1>
-</header>
 
+  <div class="container-fluid">
+    <div id="intro-spacer" style="height: 180px;"></div>
 
+    <div class="row push">
+      <div class="col-xs-12">
+        <h1>Hi, I'm Rachael</h1>
+        <p>I enjoy long walks on the beach...and web development.</p>
+      </div>
+    </div>
+
+     <br />
+     <br />
+
+   <div class="row">
+     <div class="col-xs-5 col-xs-offset-4">
+      <%= button 'About', size: :large %>
+      <%= button 'Blog', size: :large %>
+      <%= button 'Resume', size: :large %>
+    </div>
+   </div>
+  
+  </div>
 </body>
