add links to ghost buttons and style changes

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -1,9 +1,11 @@
+@charset "utf-8";
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,800);
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,600);
 
-@charset "utf-8";
+@import "font-awesome";
 
 body {
   font-family: sans-serif;
@@ -12,26 +14,67 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+}
 
+.no-bg-body {
+  background: url("#"); 
 }
 
 h1 {
   color: #fff;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Raleway', sans-serif;
   text-align: center;
   font-weight: bold;
   font-size: 54px;
   letter-spacing: -1px;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, .5);
-  
+  text-shadow: 0 1px 0 rgba(255, 255, 255, .5);  
 }
 
-p {
+h2 {
   color: #fff;
+  font-family: 'Raleway', sans-serif;
   text-align: center;
   font-weight: bold;
   font-size: 24px;
+}
 
+h3 {
+  color: #000;
+  font-family: 'Raleway', sans-serif;
+  text-align: center;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+p {
+  margin-left: 150px; 
+  margin-right: 150px;
+}
+
+.links a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.links a:hover {
+  color: #fff; 
+  text-decoration: none;
+}
+
+.icons {
+  margin-top: 35px;
+}
+
+.icons a {
+  color: #000;
+  padding-right: 15px;
+  text-decoration: none;
+}
+
+.icons a:hover {
+  color: #000; 
+  padding-right: 15px;  
+  text-decoration: none; 
 }
 
 .about-ghost-button {
@@ -51,6 +94,7 @@ p {
   color: #F2F2F2;
   margin-right: 30px;
   margin-left: 15px;
+  text-decoration: none;
 
   /* CSS Transition */
   -webkit-transition: background .2s ease-in-out, border .2s ease-in-out;
