--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,12 +1,12 @@
 <body>
 
   <div class="container-fluid">
-    <div id="intro-spacer" style="height: 180px;"></div>
+    <div id="intro-spacer" style="height: 270px;"></div>
 
     <div class="row push">
       <div class="col-xs-12">
         <h1>Hi, I'm Rachael</h1>
-        <p>I enjoy long walks on the beach...and web development.</p>
+        <h2>I enjoy long walks on the beach...and web development.</h2>
       </div>
     </div>
 
@@ -14,10 +14,17 @@
      <br />
 
    <div class="row">
-     <div class="col-xs-5 col-xs-offset-4">
-      <%= button 'About', size: :large %>
-      <%= button 'Blog', size: :large %>
-      <%= button 'Resume', size: :large %>
+     <div class="col-xs-5 col-xs-offset-4 links">
+       
+      <%= button size: :large  do
+      content_tag :link, link_to('About', '/about.html') end %>
+
+      <%= button size: :large  do
+      content_tag :link, link_to('Blog', '/blog.html') end %>
+
+      <%= button size: :large  do
+      content_tag :link, link_to('Resume', '/resume.html') end %>
+
     </div>
    </div>
   
