add social media links

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,16 @@
 <body>
 
   <div class="container-fluid">
+  
+  <div class="row">
+    <div class="col-xs-3 col-xs-offset-8 icons">
+      <a href="https://github.com/rachaelsalter"><i class="fa fa-github fa-2x"></i></a>
+      <a href="https://twitter.com/rachaelsalter"><i class="fa fa-twitter fa-2x"></i></a>
+      <a href="https://www.linkedin.com/in/rasalter"><i class="fa fa-linkedin fa-2x"></i></a>
+      <a href="mailto:rasalter@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
+   </div>
+ </div>
+
     <div id="intro-spacer" style="height: 270px;"></div>
 
     <div class="row push">
