add colored box header

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -1,7 +1,9 @@
-
+<html>
 <body class="no-bg-body">
-<h3>About Me</h3>
+  <header>Rachael Salter</header>
+   <h3>About Me</h3>
 </body>
+</html>
 
 
 
