--- a/source/blog.html.erb
+++ b/source/blog.html.erb
@@ -1,4 +1,6 @@
+<html>
 <body class="no-bg-body">
+  <header>Rachael Salter</header>
     <aside>
       <h2>Recent Articles</h2>
       <ol>
@@ -22,3 +24,4 @@
       </ol>
     </aside>
 </body>
+</html>
