--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -14,10 +14,12 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  background-color: #c9c9c9;
 }
 
 .no-bg-body {
   background: url("#"); 
+  background-color: #c9c9c9;
 }
 
 h1 {
@@ -39,11 +41,22 @@ h2 {
 }
 
 h3 {
-  color: #000;
+  color: #fff;
   font-family: 'Raleway', sans-serif;
   text-align: center;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 25px;
+}
+
+header {
+  background-color: #5199ce;
+  color: #fff;
+  font-family: 'Raleway', sans-serif;
+  font-size: 30px;
+  height: 60px;
+  width: 100%;
+  padding-left: 50px;
+  padding-top: 10px;
 }
 
 p {
