Add style to blog aside section

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,7 +3,7 @@
   <div class="container-fluid">
   
   <div class="row">
-    <div class="col-xs-3 col-xs-offset-9 icons">
+    <div class="col-xs-12 icons col-lg-3 col-lg-offset-9">
       <a href="https://github.com/rachaelsalter"><i class="fa fa-github fa-2x"></i></a>
       <a href="https://twitter.com/rachaelsalter"><i class="fa fa-twitter fa-2x"></i></a>
       <a href="https://www.linkedin.com/in/rasalter"><i class="fa fa-linkedin fa-2x"></i></a>
