--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -64,6 +64,15 @@ p {
   margin-right: 150px;
 }
 
+aside {
+  text-align: center;
+}
+
+ol {
+  text-align: center;
+  list-style-position: inside;
+}
+
 .links a {
   color: #fff;
   text-decoration: none;
