--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -1,7 +1,35 @@
 <html>
+<head><link href="../stylesheets/about.css" rel="stylesheet" type="text/css" /></head>
 <body class="no-bg-body">
-  <header>Rachael Salter</header>
+  <header class="links"><%= link_to 'Rachael Salter', 'index.html' %></header>
+  <div class="container-fluid">
+  
+  <div class="row">
+    <div class="col-xs-12 icons col-lg-3 col-lg-offset-9">
+      <a href="https://github.com/rachaelsalter"><i class="fa fa-github fa-2x"></i></a>
+      <a href="https://twitter.com/rachaelsalter"><i class="fa fa-twitter fa-2x"></i></a>
+      <a href="https://www.linkedin.com/in/rasalter"><i class="fa fa-linkedin fa-2x"></i></a>
+      <a href="mailto:rasalter@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
+   </div>
+ </div>
    <h3>About Me</h3>
+   <div class="container-fluid">
+   	<div class="row">
+
+	<div class="col-xs-5 about-img">
+   	<%= image_tag 'rachael_painting.jpg' %></div>
+
+   <div class="col-xs-7 about-p">
+   <h6>About Me</h6>
+   I am currently a student at the <%= link_to 'FirehoseProject', 'http://www.thefirehoseproject.com/' %>, an online apprenticeship program that teaches full-stack web development. We build web applications using the Ruby on Rails framework while focusing on fundamental computer programming concepts, algorithms, and data structures. 
+   <br /><br />
+   My passion began many years ago with web design and evolved into a curiosity for how to "build things". I love being immersed in the programming world and am seeking an internship opportunity to build upon my current skills. I believe mentorship is essential to a programmers development and invaluable resource.
+   <br /><br />
+   When I am not commiting to git, I enjoy adventure, diy projects, making avocado smoothies and of course, the beach. I will be moving to the West Coast in the Fall am an planning on beaching 364 days a year. 
+</div>
+
+ </div>
+</div>
 </body>
 </html>
 
