--- a/source/blog.html.erb
+++ b/source/blog.html.erb
@@ -1,22 +1,48 @@
+---
+pageable: true
+per_page: 10
+---
+
 <html>
 <body class="no-bg-body">
   <header>Rachael Salter</header>
+
+<% if paginate && num_pages > 1 %>
+  <p>Page <%= page_number %> of <%= num_pages %></p>
+
+  <% if prev_page %>
+    <p><%= link_to 'Previous page', prev_page %></p>
+  <% end %>
+<% end %>
+
+<% page_articles.each_with_index do |article, i| %>
+  <h4><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></h4>
+  <!-- use article.summary(250) if you have Nokogiri available to show just
+       the first 250 characters -->
+  <%= article.body %>
+<% end %>
+
+<% if paginate %>
+  <% if next_page %>
+    <p><%= link_to 'Next page', next_page %></p>
+  <% end %>
+<% end %>
     <aside>
-      <h2>Recent Articles</h2>
+      <h5>Recent Articles</h5>
       <ol>
         <% blog.articles[0...10].each do |article| %>
           <li><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></li>
         <% end %>
       </ol>
 
-      <h2>Tags</h2>
+      <h5>Tags</h5>
       <ol>
         <% blog.tags.each do |tag, articles| %>
           <li><%= link_to "#{tag} (#{articles.size})", tag_path(tag) %></li>
         <% end %>
       </ol>
 
-      <h2>By Year</h2>
+      <h5>By Year</h5>
       <ol>
         <% blog.articles.group_by {|a| a.date.year }.each do |year, articles| %>
           <li><%= link_to "#{year} (#{articles.size})", blog_year_path(year) %></li>
