--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -14,12 +14,11 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  background-color: #c9c9c9;
 }
 
 .no-bg-body {
   background: url("#"); 
-  background-color: #c9c9c9;
+  background-color: #fff;
 }
 
 h1 {
@@ -48,20 +47,51 @@ h3 {
   font-size: 25px;
 }
 
+h4 {
+  color: #000;
+  font-family: 'Raleway', sans-serif;
+  text-align: center;
+  font-weight: bold;
+  font-size: 25px;
+}
+
+h5 {
+  color: #000;
+  font-family: 'Raleway', sans-serif;
+  text-align: center;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+h6 {
+  color: #000;
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+  font-size: 35px;
+  margin-top: 150px;
+}
+
 header {
   background-color: #5199ce;
   color: #fff;
   font-family: 'Raleway', sans-serif;
   font-size: 30px;
-  height: 60px;
+  height: 58px;
   width: 100%;
   padding-left: 50px;
   padding-top: 10px;
 }
 
 p {
-  margin-left: 150px; 
-  margin-right: 150px;
+  font-size: 18px;
+  margin-left: 250px; 
+  margin-right: 250px;
+}
+
+.about-p {
+  font-size: 16px;
+  font-family: 'Raleway', sans-serif;
+  padding-right: 200px;
 }
 
 aside {
@@ -79,12 +109,13 @@ ol {
 }
 
 .links a:hover {
-  color: #fff; 
+  color: #000; 
   text-decoration: none;
 }
 
 .icons {
-  margin-top: 25px;
+  padding-top: 11px;
+  padding-bottom: 5px;
 }
 
 .icons a {
@@ -95,7 +126,6 @@ ol {
 
 .icons a:hover {
   color: #000; 
-  padding-right: 15px;  
   text-decoration: none; 
 }
 
