--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -1,16 +1,18 @@
 <html>
 <head><link href="../stylesheets/about.css" rel="stylesheet" type="text/css" /></head>
 <body class="no-bg-body">
-  <header class="links"><%= link_to 'Rachael Salter', 'index.html' %></header>
-  <div class="container-fluid">
-  
+  <header><%= link_to 'Rachael Salter', 'index.html' %></header>
+
+  <div class="container-fluid"> 
   <div class="row">
-    <div class="col-xs-12 icons col-lg-3 col-lg-offset-9">
+  	<div class="col-xs-9 navb">
+  		<%= link_to 'Blog', 'blog.html' %>
+        <%= link_to 'Resume', 'docs/rsalter.resume.pdf' %></div>
+    <div class="icons col-xs-3">
       <a href="https://github.com/rachaelsalter"><i class="fa fa-github fa-2x"></i></a>
       <a href="https://twitter.com/rachaelsalter"><i class="fa fa-twitter fa-2x"></i></a>
       <a href="https://www.linkedin.com/in/rasalter"><i class="fa fa-linkedin fa-2x"></i></a>
-      <a href="mailto:rasalter@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
-   </div>
+      <a href="mailto:rasalter@gmail.com"><i class="fa fa-envelope fa-2x"></i></a></div>
  </div>
    <h3>About Me</h3>
    <div class="container-fluid">
