--- a/source/blog.html.erb
+++ b/source/blog.html.erb
@@ -4,8 +4,21 @@ per_page: 10
 ---
 
 <html>
+<head><link href="../stylesheets/about.css" rel="stylesheet" type="text/css" /></head>
 <body class="no-bg-body">
-  <header>Rachael Salter</header>
+  <header><%= link_to 'Rachael Salter', 'index.html' %></header>
+
+  <div class="container-fluid"> 
+  <div class="row">
+    <div class="col-xs-9 navb">
+      <%= link_to 'About', 'about.html' %>
+        <%= link_to 'Resume', 'docs/rsalter.resume.pdf' %></div>
+    <div class="icons col-xs-3">
+      <a href="https://github.com/rachaelsalter"><i class="fa fa-github fa-2x"></i></a>
+      <a href="https://twitter.com/rachaelsalter"><i class="fa fa-twitter fa-2x"></i></a>
+      <a href="https://www.linkedin.com/in/rasalter"><i class="fa fa-linkedin fa-2x"></i></a>
+      <a href="mailto:rasalter@gmail.com"><i class="fa fa-envelope fa-2x"></i></a></div>
+ </div>
 
 <% if paginate && num_pages > 1 %>
   <p>Page <%= page_number %> of <%= num_pages %></p>
