--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -68,7 +68,7 @@ h6 {
   font-family: 'Raleway', sans-serif;
   font-weight: bold;
   font-size: 35px;
-  margin-top: 150px;
+  margin-top: 145px;
 }
 
 header {
@@ -82,6 +82,16 @@ header {
   padding-top: 10px;
 }
 
+header a {
+  color: #fff;
+  text-decoration: none;
+}
+
+header a:hover {
+  color: #FFFFCC; 
+  text-decoration: none;
+}
+
 p {
   font-size: 18px;
   margin-left: 250px; 
@@ -92,6 +102,10 @@ p {
   font-size: 16px;
   font-family: 'Raleway', sans-serif;
   padding-right: 200px;
+}
+
+.about-img {
+  margin-left: -15px;
 }
 
 aside {
@@ -113,6 +127,24 @@ ol {
   text-decoration: none;
 }
 
+.navb {
+  text-align: right; 
+  padding-right: 140px; 
+}
+
+.navb a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 20px;
+  font-family: 'Raleway', sans-serif; 
+  padding-right: 15px;
+}
+
+.navb a:hover {
+  color: #000; 
+  
+}
+
 .icons {
   padding-top: 11px;
   padding-bottom: 5px;
@@ -126,7 +158,6 @@ ol {
 
 .icons a:hover {
   color: #000; 
-  text-decoration: none; 
 }
 
 .about-ghost-button {
