--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -25,9 +25,9 @@
    <h6>About Me</h6>
    I am currently a student at the <%= link_to 'FirehoseProject', 'http://www.thefirehoseproject.com/' %>, an online apprenticeship program that teaches full-stack web development. We build web applications using the Ruby on Rails framework while focusing on fundamental computer programming concepts, algorithms, and data structures. 
    <br /><br />
-   My passion began many years ago with web design and evolved into a curiosity for how to "build things". I love being immersed in the programming world and am seeking an internship opportunity to build upon my current skills. I believe mentorship is essential to a programmers development and invaluable resource.
+   My passion began many years ago with web design and evolved into a curiosity for how to "build things". I love being immersed in the programming world and am seeking an internship opportunity to build upon my current skills. I believe mentorship is essential to a programmer's development and an invaluable resource.
    <br /><br />
-   When I am not commiting to git, I enjoy adventure, diy projects, making avocado smoothies and of course, the beach. I will be moving to the West Coast in the Fall am an planning on beaching 364 days a year. 
+   When I am not commiting to git, I enjoy adventure, diy projects, making avocado smoothies and of course, the beach. I will be moving to the West Coast in the fall and am planning on beaching 364 days a year. 
 </div>
 
  </div>
