--- a/source/blog.html.erb
+++ b/source/blog.html.erb
@@ -7,7 +7,6 @@ per_page: 10
 <head><link href="../stylesheets/about.css" rel="stylesheet" type="text/css" /></head>
 <body class="no-bg-body">
   <header><%= link_to 'Rachael Salter', 'index.html' %></header>
-
   <div class="container-fluid"> 
   <div class="row">
     <div class="col-xs-9 navb">
@@ -28,11 +27,14 @@ per_page: 10
   <% end %>
 <% end %>
 
-<% page_articles.each_with_index do |article, i| %>
-  <h4><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></h4>
+<% page_articles.each do |article| %>
+  <div id="intro-spacer" style="height: 50px;"></div>
+  <h4><%= link_to article.title, article %></h4>
   <!-- use article.summary(250) if you have Nokogiri available to show just
        the first 250 characters -->
-  <%= article.body %>
+  <div class="blog-p"><%= article.summary %>
+    <%= link_to 'Read more…', article %>
+  </div>
 <% end %>
 
 <% if paginate %>
@@ -40,6 +42,7 @@ per_page: 10
     <p><%= link_to 'Next page', next_page %></p>
   <% end %>
 <% end %>
+<div id="intro-spacer" style="height: 50px;"></div>
     <aside>
       <h5>Recent Articles</h5>
       <ol>
