--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -108,6 +108,13 @@ p {
   margin-left: -15px;
 }
 
+.blog-p {
+  font-size: 17px;
+  font-family: 'Raleway', sans-serif;
+  padding-left: 225px;
+  padding-right: 225px;
+}
+
 aside {
   text-align: center;
 }
@@ -129,7 +136,7 @@ ol {
 
 .navb {
   text-align: right; 
-  padding-right: 140px; 
+  padding-right: 200px; 
 }
 
 .navb a {
