Only title in blog link

--- a/source/layouts/article_layout.html.erb
+++ b/source/layouts/article_layout.html.erb
@@ -16,7 +16,7 @@
       <a href="mailto:rasalter@gmail.com"><i class="fa fa-envelope fa-2x"></i></a></div>
  </div>
  <div id="intro-spacer" style="height: 50px;"></div>
- <%= current_article.title %>
+ <h4><%= current_article.title %></h4>
   <article class="blog-p">
     <%= yield %>
   </article>
