--- a/source/blog.html.erb
+++ b/source/blog.html.erb
@@ -33,7 +33,7 @@ per_page: 10
   <!-- use article.summary(250) if you have Nokogiri available to show just
        the first 250 characters -->
   <div class="blog-p"><%= article.summary %>
-    <%= link_to 'Read more…', article %>
+    <center><%= link_to 'Read more…', article %></center>
   </div>
 <% end %>
 
