--- a/source/layout.html.erb
+++ b/source/layout.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
-    <title>Blog Title<%= ' - ' + current_article.title unless current_article.nil? %></title>
+    <title>Rachael Salter<%= ' - ' + current_article.title unless current_article.nil? %></title>
     <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
     <link href="../stylesheets/all.css" rel="stylesheet" type="text/css" />
     <link href="../stylesheets/normalize.css" rel="stylesheet" type="text/css" />
