--- a/source/layout.html.erb
+++ b/source/layout.html.erb
@@ -5,10 +5,10 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
     <title>Rachael Salter<%= ' - ' + current_article.title unless current_article.nil? %></title>
     <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
-    <link href="../stylesheets/all.css" rel="stylesheet" type="text/css" />
-    <link href="../stylesheets/normalize.css" rel="stylesheet" type="text/css" />
-    <link href="../stylesheets/bootstrap-social.css" rel="stylesheet" type="text/css" />
-    <script src="../javascripts/all.js" type="text/javascript"></script>
+    <link href="/stylesheets/all.css" rel="stylesheet" type="text/css" />
+    <link href="/stylesheets/normalize.css" rel="stylesheet" type="text/css" />
+    <link href="/stylesheets/bootstrap-social.css" rel="stylesheet" type="text/css" />
+    <script src="/javascripts/all.js" type="text/javascript"></script>
   </head>
   <body>
     <div id="main" role="main">
