Update blog posts and resume

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -23,9 +23,9 @@
 
    <div class="col-xs-7 about-p">
    <h6>About Me</h6>
-   I am currently a student at the <%= link_to 'FirehoseProject', 'http://www.thefirehoseproject.com/' %>, an online apprenticeship program that teaches full-stack web development. We build web applications using the Ruby on Rails framework while focusing on fundamental computer programming concepts, algorithms, and data structures. 
+   I am currently studying at the <%= link_to 'FirehoseProject', 'http://www.thefirehoseproject.com/' %>, an online apprenticeship program that teaches full-stack web development. We build web applications using the Ruby on Rails framework while focusing on fundamental computer programming concepts, algorithms, and data structures. 
    <br /><br />
-   My passion began many years ago with web design and evolved into a curiosity for how to "build things". I love being immersed in the programming world and am seeking an internship opportunity to build upon my current skills. I believe mentorship is essential to a programmers development and invaluable resource.
+   My passion began many years ago with web design and evolved into a curiosity for how to "build stuff”. I love being immersed in the programming world and am seeking a Junior Developer or internship opportunity.  I am dedicated to learning my craft and would love to contribute to a team while building upon my current skill set. I believe mentorship is essential to a programmers development and an invaluable resource.
    <br /><br />
    When I am not commiting to git, I enjoy adventure, diy projects, making avocado smoothies and of course, the beach. I will be moving to the West Coast in the Fall am an planning on beaching 365 days a year. 
 </div>
