--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -33,7 +33,7 @@
       content_tag :link, link_to('Blog', '/blog.html') end %>
 
       <%= button size: :large  do
-      content_tag :link, link_to('Resume', '/docs/rsalter.resume15.pdf') end %>
+      content_tag :link, link_to('Resume', '/docs/rsalter.resume.pdf') end %>
 
     </div>
    </div>
