--- a/source/layouts/article_layout.html.erb
+++ b/source/layouts/article_layout.html.erb
@@ -1,5 +1,5 @@
 <html>
-<head><link href="../stylesheets/about.css" rel="stylesheet" type="text/css" /></head>
+<head><link href="/stylesheets/about.css" rel="stylesheet" type="text/css" /></head>
 <% wrap_layout :layout do %>
 <body class="no-bg-body">
 <header><%= link_to 'Rachael Salter', '../index.html' %></header>
@@ -8,7 +8,7 @@
   	<div class="col-xs-9 navb">
   		<%= link_to 'Blog Home', '../blog.html' %>
   		<%= link_to 'About', '../about.html' %>
-        <%= link_to 'Resume', '../docs/rsalter.resume15.pdf' %></div>
+        <%= link_to 'Resume', '../docs/rsalter.resume.pdf' %></div>
     <div class="icons col-xs-3">
       <a href="https://github.com/rachaelsalter"><i class="fa fa-github fa-2x"></i></a>
       <a href="https://twitter.com/rachaelsalter"><i class="fa fa-twitter fa-2x"></i></a>
