--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -28,7 +28,7 @@ h1 {
   font-weight: bold;
   font-size: 54px;
   letter-spacing: -1px;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, .5);  
+  text-shadow: 0 1px 0 rgba(255, 255, 255, .5); 
 }
 
 h2 {
@@ -37,6 +37,7 @@ h2 {
   text-align: center;
   font-weight: bold;
   font-size: 24px;
+  text-shadow: rgba(0,0,0,0.95) 1px 1px; 
 }
 
 h3 {
