--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -24,16 +24,19 @@
      <br />
 
    <div class="row">
-     <div class="col-xs-5 col-xs-offset-4 links">
+     <div class="col-xs-6 col-xs-offset-3 links">
        
       <%= button size: :large  do
       content_tag :link, link_to('About', '/about.html') end %>
 
       <%= button size: :large  do
-      content_tag :link, link_to('Blog', '/blog.html') end %>
+      content_tag :link, link_to('Portfolio', 'portfolio.html') end %>
 
       <%= button size: :large  do
       content_tag :link, link_to('Resume', '/docs/rsalter.resume.pdf') end %>
+
+       <%= button size: :large  do
+      content_tag :link, link_to('Blog', '/blog.html') end %>
 
     </div>
    </div>
