--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -7,13 +7,23 @@
 
 @import "font-awesome";
 
+@media only screen and (max-width: 767px) {
+  body {
+    background: url("..images/sdbg_sm.jpg");
+  }
+}
+
 body {
   font-family: sans-serif;
   background: url("../images/sdbg.jpg"); 
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+
 }
 
 .no-bg-body {
