responsive menu test about page

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -1,19 +1,31 @@
 <html>
 <head><link href="../stylesheets/about.css" rel="stylesheet" type="text/css" /></head>
 <body class="no-bg-body">
-  <header><%= link_to 'Rachael Salter', 'index.html' %></header>
+  <header class="top" role="header">
+    <div class="container-fluid">
+      <div class="navb">
+        <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="glyphicon glyphicon-align-justify"></span>
+        </button>
 
-  <div class="container-fluid"> 
-  <div class="row">
-  	<div class="col-xs-9 navb">
-  		<%= link_to 'Blog', 'blog.html' %>
-        <%= link_to 'Resume', 'docs/rsalter.resume.pdf' %></div>
-    <div class="icons col-xs-3">
-      <a href="https://github.com/rachaelsalter"><i class="fa fa-github fa-2x"></i></a>
-      <a href="https://twitter.com/rachaelsalter"><i class="fa fa-twitter fa-2x"></i></a>
-      <a href="https://www.linkedin.com/in/rasalter"><i class="fa fa-linkedin fa-2x"></i></a>
-      <a href="mailto:rasalter@gmail.com"><i class="fa fa-envelope fa-2x"></i></a></div>
- </div>
+          <nav class="navbar-collapse collapse" role="navigation">
+              <ul class="navbar-nav nav">
+                <a href="index.html"><%= image_tag 'rs_logo.png' %></a>
+                <li><%= link_to 'Blog', 'blog.html' %></li>
+                <li><%= link_to 'Resume', 'docs/rsalter.resume.pdf' %></li>
+             </ul>
+          <div class="icons">
+          <a href="https://github.com/rachaelsalter"><i class="fa fa-github fa-2x"></i></a>
+        <a href="https://twitter.com/rachaelsalter"><i class="fa fa-twitter fa-2x"></i></a>
+            <a href="https://www.linkedin.com/in/rasalter"><i class="fa fa-linkedin fa-2x"></i></a>
+            <a href="mailto:rasalter@gmail.com"><i class="fa fa-envelope fa-2x"></i></a></div>
+        </nav>
+      </div>
+    </header>
+
+  
+  		
+       
    <h3>About Me</h3>
    <div class="container-fluid">
    	<div class="row">
