--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -28,7 +28,7 @@ body {
 
 .no-bg-body {
   background: url("#"); 
-  background-color: #fff;
+  background-color: #FFF;
 }
 
 .color-bg {
@@ -101,10 +101,11 @@ header {
   color: #fff;
   font-family: 'Raleway', sans-serif;
   font-size: 30px;
-  height: 58px;
+  height: 50px;
   width: 100%;
   padding-left: 50px;
-  padding-top: 10px;
+  padding-top: 0px;
+  margin-bottom: -6px;
 }
 
 header a {
@@ -191,7 +192,6 @@ ol {
 
 .navb {
   text-align: right; 
-  padding-right: 200px; 
 }
 
 .navb a {
@@ -203,14 +203,13 @@ ol {
 }
 
 .navb a:hover {
-  color: #000; 
-  
+  color: #000;   
 }
 
 .icons {
-  padding-top: 11px;
-  padding-bottom: 5px;
+  padding-top: 5px;
 }
+
 
 .icons a {
   color: #000;
