--- a/source/portfolio.html.erb
+++ b/source/portfolio.html.erb
@@ -2,13 +2,12 @@
 <head><link href="../stylesheets/about.css" rel="stylesheet" type="text/css" /></head>
 <body class="color-bg">
   <header><%= link_to 'Rachael Salter', 'index.html' %></header>
-
   <div class="container-fluid"> 
   <div class="row">
-    <div class="col-xs-9 navb">
-      <%= link_to 'Blog', 'blog.html' %>
-        <%= link_to 'Resume', 'docs/rsalter.resume.pdf' %></div>
-    <div class="icons col-xs-3">
+    <div class="col-xs-9 hidden-xs navb">
+      <%= link_to 'About', 'about.html' %>
+      <%= link_to 'Resume', 'docs/rsalter.resume.pdf' %></div>
+    <div class="icons col-md-3 hidden-xs">
       <a href="https://github.com/rachaelsalter"><i class="fa fa-github fa-2x"></i></a>
       <a href="https://twitter.com/rachaelsalter"><i class="fa fa-twitter fa-2x"></i></a>
       <a href="https://www.linkedin.com/in/rasalter"><i class="fa fa-linkedin fa-2x"></i></a>
@@ -20,13 +19,11 @@
 
   <div class="container-fluid">
     <div class="row-margin">
-      <div class="col-md-5 col-md-offset-1 app-img-l">
-       <a href="https://splurty-rachael-salter.herokuapp.com" target="_blank"><%= image_tag 'iphone-RWM.png' %></a>
-
-       </div>
+      <div class="col-md-6 col-sm-12 app-img-l">
+       <a href="https://splurty-rachael-salter.herokuapp.com" target="_blank" class="img-responsive"><%= image_tag 'iphone-RWM.png' %></a></div>
     </div>
 
-      <div class="col-md-6 about-r">
+      <div class="col-md-6 col-sm-12 about-r">
         <h6>Real World Marraige App</h6>
         Text here....apprenticeship  program that teaches full-stack  web development. We build web applications using the Ruby  on Rails framework while focusing on fundamental computer   programming concepts, algorithms, and data structures.Text here....apprenticeship  program that teaches full-stack web   development. We build web  applications using the Ruby on Rails   framework while focusing on   fundamental computer programming  concepts, algorithms, and data   structures.</div> 
     </div>  
@@ -34,12 +31,12 @@
     <div class="clearfix"></div>
 
     <div class="row-margin">
-       <div class="col-md-6 about-l">
+       <div class="col-md-5 col-md-offset-1 col-sm-12 app-img-r">
+        <a href="https://nomster-rachael-salter.herokuapp.com" target="_blank" class="img-responsive"><%= image_tag 'macbook_wineries_go_441.png' %></a></div>
+    </div>
+       <div class="col-md-6 col-sm-12 about-l">
         <h6>Wineries Go</h6>
         Text here....apprenticeship  program that teaches full-stack web   development. We build web  applications using the Ruby on Rails   framework while focusing on   fundamental computer programming  concepts, algorithms, and data   structures.Text here....apprenticeship  program that teaches full-stack web   development. We build web  applications using the Ruby on Rails   framework while focusing on   fundamental computer programming  concepts, algorithms, and data   structures.</div>
-      <div class="col-md-5 col-md-offset-1 app-img-r">
-        <a href="https://nomster-rachael-salter.herokuapp.com" target="_blank"><%= image_tag 'macbook_wineries_go.png' %></div>
-    </div>
     
     <div class="clearfix"></div>
 
