adjust resp. hidden text

--- a/source/portfolio.html.erb
+++ b/source/portfolio.html.erb
@@ -4,10 +4,10 @@
   <header><%= link_to 'Rachael Salter', 'index.html' %></header>
   <div class="container-fluid"> 
   <div class="row">
-    <div class="col-xs-9 hidden-xs navb">
+    <div class="col-md-9 hidden-sm hidden-xs navb">
       <%= link_to 'About', 'about.html' %>
       <%= link_to 'Resume', 'docs/rsalter.resume.pdf' %></div>
-    <div class="icons col-md-3 hidden-xs">
+    <div class="icons col-md-3 hidden-sm hidden-xs">
       <a href="https://github.com/rachaelsalter"><i class="fa fa-github fa-2x"></i></a>
       <a href="https://twitter.com/rachaelsalter"><i class="fa fa-twitter fa-2x"></i></a>
       <a href="https://www.linkedin.com/in/rasalter"><i class="fa fa-linkedin fa-2x"></i></a>
@@ -20,7 +20,7 @@
   <div class="container-fluid">
     <div class="row-margin">
       <div class="col-md-6 col-sm-12 app-img-l">
-       <a href="https://splurty-rachael-salter.herokuapp.com" target="_blank" class="img-responsive"><%= image_tag 'iphone-RWM.png' %></a></div>
+       <a href="https://splurty-rachael-salter.herokuapp.com" target="_blank"><%= image_tag 'iphone-RWM.png' %></a></div>
     </div>
 
       <div class="col-md-6 col-sm-12 about-r">
@@ -32,7 +32,7 @@
 
     <div class="row-margin">
        <div class="col-md-5 col-md-offset-1 col-sm-12 app-img-r">
-        <a href="https://nomster-rachael-salter.herokuapp.com" target="_blank" class="img-responsive"><%= image_tag 'macbook_wineries_go_441.png' %></a></div>
+        <a href="https://nomster-rachael-salter.herokuapp.com" target="_blank"><%= image_tag 'macbook_wineries_go_441.png' %></a></div>
     </div>
        <div class="col-md-6 col-sm-12 about-l">
         <h6>Wineries Go</h6>
