--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -4,7 +4,7 @@
   <header><%= link_to 'Rachael Salter', 'index.html' %></header>
     <div class="container-fluid"> 
     <div class="row">
-      <div class="col-xs-9 hidden-xs navb">
+      <div class="col-xs-9 hidden-sm hidden-xs navb">
       <%= link_to 'Portfolio', 'portfolio.html' %>
       <%= link_to 'Resume', 'docs/rsalter.resume.pdf' %></div>
     <div class="icons col-md-3 hidden-xs">
@@ -17,7 +17,7 @@
    <div class="container-fluid">
    	<div class="row">
 
-	<div class="col-md-5 hidden-xs about-img">
+	<div class="col-md-5 hidden-sm hidden-xs about-img">
    	<%= image_tag 'rachael_painting.jpg' %></div>
 
    <div class="col-md-7 col-sm-12 about-p">
