fix hidden text about page

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -4,10 +4,10 @@
   <header><%= link_to 'Rachael Salter', 'index.html' %></header>
     <div class="container-fluid"> 
     <div class="row">
-      <div class="col-xs-9 hidden-sm hidden-xs navb">
-      <%= link_to 'Portfolio', 'portfolio.html' %>
-      <%= link_to 'Resume', 'docs/rsalter.resume.pdf' %></div>
-    <div class="icons col-md-3 hidden-xs">
+      <div class="col-md-9 hidden-sm hidden-xs navb">
+        <%= link_to 'Portfolio', 'portfolio.html' %>
+        <%= link_to 'Resume', 'docs/rsalter.resume.pdf' %></div>
+      <div class="icons col-md-3 hidden-xs hidden-sm">
       <a href="https://github.com/rachaelsalter"><i class="fa fa-github fa-2x"></i></a>
      <a href="https://twitter.com/rachaelsalter"><i class="fa fa-twitter fa-2x"></i></a>
       <a href="https://www.linkedin.com/in/rasalter"><i class="fa fa-linkedin fa-2x"></i></a>
