fix image spacing

--- a/source/portfolio.html.erb
+++ b/source/portfolio.html.erb
@@ -34,7 +34,7 @@
 
     <div class="row-margin">
        <div class="col-md-5 col-md-offset-1 col-sm-12 app-img-r">
-        <a href="https://nomster-rachael-salter.herokuapp.com" target="_blank"><%= image_tag 'macbook_wineries_go_441.png' %></a></div>
+        <a href="https://nomster-rachael-salter.herokuapp.com" target="_blank"><%= image_tag 'macbook_wineries_go.png' %></a></div>
     </div>
        <div class="col-md-6 col-sm-12 about-l">
         <h6>Wineries Go</h6>
