upload additional portfolio items

--- a/source/portfolio.html.erb
+++ b/source/portfolio.html.erb
@@ -1,6 +1,6 @@
 <html>
 <head><link href="../stylesheets/about.css" rel="stylesheet" type="text/css" /></head>
-<body class="color-bg">
+<body class="color-bg-2">
   <header><%= link_to 'Rachael Salter', 'index.html' %></header>
   <div class="container-fluid"> 
   <div class="row">
@@ -26,9 +26,8 @@
       <div class="col-md-6 col-sm-12 about-r">
         <h6><a href="https://splurty-rachael-salter.herokuapp.com/" target="_blank">Real World Marraige</a></h6>
         <strong><em>Full Stack, Ruby on Rails</em></strong></br></br>
-        A quote generating web app written with HTML, CSS3 and Ruby code on the Rails framework. The design is mobile first built with professional web development tools: Sublime, Terminal, postgres, GitHub and Heroku.
-      </div> 
-    </div>  
+        A quote generating web app written with HTML, CSS3 and Ruby code on the Rails framework. The design is mobile-first and is with built professional web development tools: Sublime, Terminal, PostgreSQL, GitHub and Heroku. I completed this app as a student with The Firehose Project.</div> 
+    
 
     <div class="clearfix"></div>
 
@@ -36,14 +35,50 @@
        <div class="col-md-5 col-md-offset-1 col-sm-12 app-img-r">
         <a href="https://nomster-rachael-salter.herokuapp.com" target="_blank"><%= image_tag 'macbook_wineries_go.png' %></a></div>
     </div>
+
        <div class="col-md-6 col-sm-12 about-l">
         <h6><a href="https://nomster-rachael-salter.herokuapp.com" target="_blank">Wineries Go</a></h6>
         <strong><em>Full Stack, Ruby on Rails</em></strong></br></br>
-        A business review web app integrated with the Google Maps API which  transforms addresses into coordinates and place pins on maps. Other features include user authentication and dashboard, star rating system, automated email notifications and user comment features.<br></br>
+        A business review web app integrated with the Google Maps API which  transforms addresses into coordinates and place pins on maps. Other features include user authentication and dashboard, star rating system, automated email notifications and user comment features. I completed this app as a student with The Firehose Project.<br></br>
         Test User: appmail.rs@gmail.com<br>
         Password: password</div>
     
     <div class="clearfix"></div>
+
+    <div class="row-margin">
+       <div class="col-md-5 col-md-offset-1 col-sm-12 app-img-r">
+        <a href="http://elkinspark.net/" target="_blank"><%= image_tag 'ipad_ep.png' %></a></div>
+    </div>
+       <div class="col-md-6 col-sm-12 about-l">
+        <h6><a href="http://elkinspark.net/" target="_blank">ElkinsPark.net</a></h6>
+        <strong><em>WordPress</em></strong></br></br>
+        As Project Manager I led the development of a local business and event portal ElkinsPark.net. WordPress theme selection, installation and customization using HTML & CSS; Created website graphics with Photoshop; Installed various plugins such as pricing table, social media and email marketing.<br></br>
+        Test User: appmail.rs@gmail.com<br>
+        Password: password</div>
+
+        <div class="clearfix"></div>
+
+    <div class="row-margin">
+       <div class="col-md-5 col-md-offset-1 col-sm-12 app-img-r">
+        <a href="http://davidsean.co/" target="_blank"><%= image_tag 'macbook_ds.png' %></a></div>
+    </div>
+       <div class="col-md-6 col-sm-12 about-l">
+        <h6><a href="http://davidsean.co/" target="_blank">David Sean, Personal Trainer</a></h6>
+        <strong><em>WordPress, Freelance</em></strong></br></br>
+        As a freelancer I worked with client, David Sean, to update features of his WordPress website. I created a new internal testimonials page and changed the layout of testimonials on the homepage. New testimonial images were also created with Photoshop. The blog layout was changed on the homepage to display his posts in more detail and a new Instagram widget was installed to allowed for larger images.</div>
+
+        <div class="clearfix"></div>
+
+    <div class="row-margin">
+       <div class="col-md-5 col-md-offset-1 col-sm-12 app-img-r">
+        <a href="http://rockystreeservice.com/" target="_blank"><%= image_tag 'imac_rockys.png' %></a></div>
+    </div>
+       <div class="col-md-6 col-sm-12 about-l">
+        <h6><a href="http://rockystreeservice.com/" target="_blank">Rocky's Tree Service</a></h6>
+        <strong><em>WordPress</em></strong></br></br>
+        As Project Manager I led the development of this business website and launch of start-up Rocky's Tree service. WordPress theme selection, installation and customization using HTML & CSS; Image selection and editing with Photoshop.</div>
+
+     <div class="clearfix"></div>
 
     <div class="row-margin">
        <div class="col-md-6 about-l">
