--- a/source/layouts/article_layout.html.erb
+++ b/source/layouts/article_layout.html.erb
@@ -8,7 +8,9 @@
   	<div class="col-xs-9 navb">
   		<%= link_to 'Blog Home', '../blog.html' %>
   		<%= link_to 'About', '../about.html' %>
-        <%= link_to 'Resume', '../docs/rsalter.resume.pdf' %></div>
+      <%= link_to 'Resume', '../docs/rsalter.resume.pdf' %>
+    </div>
+  </div>
     <div class="icons col-xs-3">
       <a href="https://github.com/rachaelsalter"><i class="fa fa-github fa-2x"></i></a>
       <a href="https://twitter.com/rachaelsalter"><i class="fa fa-twitter fa-2x"></i></a>
