portfolio copy updates

--- a/source/portfolio.html.erb
+++ b/source/portfolio.html.erb
@@ -65,7 +65,7 @@
        <div class="col-md-6 col-sm-12 about-l">
         <h6><a href="http://davidsean.co/" target="_blank">David Sean, Personal Trainer</a></h6>
         <strong><em>WordPress, Freelance</em></strong></br></br>
-        As a freelancer I worked with client, David Sean, to update features of his WordPress website. I created a new internal testimonials page and changed the layout of testimonials on the homepage. New testimonial images were also created with Photoshop. The blog layout was changed on the homepage to display his posts in more detail and a new Instagram widget was installed to allowed for larger images.</div>
+        As a freelancer I worked with client, David Sean, to update features of his WordPress website. I created a new internal testimonials page and re-arranged the testimonials position on the homepage. New "Before / After" images were created with Photoshop. The blog layout was changed to display his posts in more detail and a new Instagram widget was installed to allow for larger images.</div>
 
         <div class="clearfix"></div>
 
@@ -76,7 +76,7 @@
        <div class="col-md-6 col-sm-12 about-l">
         <h6><a href="http://rockystreeservice.com/" target="_blank">Rocky's Tree Service</a></h6>
         <strong><em>WordPress</em></strong></br></br>
-        As Project Manager I led the development of this business website and launch of start-up Rocky's Tree service. WordPress theme selection, installation and customization using HTML & CSS; Image selection and editing with Photoshop.</div>
+        As Project Manager I led the development of this business website and launch of startup Rocky's Tree service. WordPress theme selection, installation and customization using HTML & CSS; Image selection and editing with Photoshop.</div>
 
      <div class="clearfix"></div>
 
