--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -22,7 +22,7 @@
 
    <div class="col-md-7 col-sm-12 about-p">
    <h6>About Me</h6>
-   I am a graduate of the <%= link_to 'FirehoseProject', 'http://www.thefirehoseproject.com/' %>, an online apprenticeship program that teaches full-stack web development. During my studies I learned how to build web applications using the Ruby on Rails framework while focusing on fundamental computer programming concepts, algorithms, and data structures. 
+   I am a graduate of the <%= link_to 'FirehoseProject', 'http://www.thefirehoseproject.com/' %>, an online apprenticeship program that teaches full-stack web development. During my studies, I learned how to build web applications using the Ruby on Rails framework while focusing on fundamental computer programming concepts, algorithms, and data structures. 
    <br /><br />
    My passion began many years ago with web design and evolved into a curiosity for how to "build stuff”. I love being immersed in the programming world and am seeking a Junior Developer or internship opportunity.  I am dedicated to learning my craft and would love to contribute to a team while building upon my current skill set. I believe mentorship is essential to a programmers development and an invaluable resource.
    <br /><br />
