--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -1,321 +1,1 @@
-@charset "utf-8";
-
-@import "bootstrap-sprockets";
-@import "bootstrap";
-
-@import url(http://fonts.googleapis.com/css?family=Raleway:400,600);
-
-@import "font-awesome";
-
-@media only screen and (max-width: 767px) {
-  body {
-    background: url("..images/sdbg_sm.jpg");
-  }
-}
-
-body {
-  font-family: sans-serif;
-  background: url("../images/sdbg.jpg"); 
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-
-}
-
-.no-bg-body {
-  background: url("#"); 
-  background-color: #FFF;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-.color-bg {
-  background: url("#");
-  background-color: #FCFCFC;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-.color-bg-2{
-  background: url("#");
-  background-color: #F1EEEE;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-h1 {
-  color: #fff;
-  font-family: 'Raleway', sans-serif;
-  text-align: center;
-  font-weight: bold;
-  font-size: 54px;
-  letter-spacing: -1px;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, .5); 
-}
-
-h2 {
-  color: #fff;
-  font-family: 'Raleway', sans-serif;
-  text-align: center;
-  font-weight: bold;
-  font-size: 25px;
-  text-shadow: rgba(0,0,0,0.95) 1px 1px; 
-}
-
-h3 {
-  color: #fff;
-  font-family: 'Raleway', sans-serif;
-  text-align: center;
-  font-weight: bold;
-  font-size: 25px;
-} 
-
-h4 {
-  color: #000;
-  font-family: 'Raleway', sans-serif;
-  text-align: center;
-  font-weight: bold;
-  font-size: 25px;
-}
-
-h5 {
-  color: #000;
-  font-family: 'Raleway', sans-serif;
-  text-align: center;
-  font-weight: bold;
-  font-size: 15px;
-}
-
-h6 {
-  color: #000;
-  font-family: 'Raleway', sans-serif;
-  font-weight: bold;
-  font-size: 35px;
-  margin-top: 145px;
-}
-
-.title {
-  color: #000;
-  font-family: 'Raleway', sans-serif;
-  text-align: center;
-  font-weight: bold;
-  font-size: 45px;
-  padding-top: 100px;
-}
-
-header {
-  background-color: #5199ce;
-  color: #fff;
-  font-family: 'Raleway', sans-serif;
-  font-size: 30px;
-  height: 58px;
-  width: 100%;
-  padding-left: 50px;
-  padding-top: 10px;
-}
-
-header a {
-  color: #fff;
-  text-decoration: none;
-}
-
-header a:hover {
-  color: #FFFFCC; 
-  text-decoration: none;
-}
-
-p {
-  font-size: 18px;
-  margin-left: 250px; 
-  margin-right: 250px;
-}
-
-.row-margin {
-  margin-top: 100px;
-  margin-bottom: 100px;
-}
-
-.about-p {
-  font-size: 16px;
-  font-family: 'Raleway', sans-serif;
-  padding-right: 200px;
-}
-
-.about-r {
-  font-size: 16px;
-  font-family: 'Raleway', sans-serif;
-  padding-right: 100px;
-  text-align: left;
-  
-}
-
-.about-l {
-  font-size: 16px;
-  font-family: 'Raleway', sans-serif;
-  padding-left: 75px;
-  text-align: left;
-  
-}
-
-.about-img {
-  margin-left: -15px;
-}
-
-.app-img-l {
-  margin-left: -50px;
- 
-}
-
-.app-img-r {
-  margin-left: -5px;
-  
-}
-
-.blog-p {
-  font-size: 17px;
-  font-family: 'Raleway', sans-serif;
-  padding-left: 50px;
-  padding-right: 50px;
-}
-
-aside {
-  text-align: center;
-}
-
-ol {
-  text-align: center;
-  list-style-position: inside;
-}
-
-.links a {
-  color: #fff;
-  text-decoration: none;
-}
-
-.links a:hover {
-  color: #000; 
-  text-decoration: none;
-}
-
-.navb {
-  text-align: right; 
-  padding-right: 240px; 
-  margin-top: 12px;
-}
-
-.navb a {
-  color: #fff;
-  text-decoration: none;
-  font-size: 20px;
-  font-family: 'Raleway', sans-serif; 
-  padding-right: 15px;
-}
-
-.navb a:hover {
-  color: #000;   
-}
-
-.icons {
-  padding-top: 11px;
-  padding-bottom: 5px;
-}
-
-
-.icons a {
-  color: #000;
-  padding-right: 15px;
-  text-decoration: none;
-}
-
-.icons a:hover {
-  color: #000; 
-}
-
-.about-ghost-button {
-  display: inline-block;
-  width: 200px;
-  padding: 8px;
-  color: #fff;
-  border: 1px solid #fff;
-  text-align: center;
-  outline: none;
-  text-decoration: none;
-}
-
-.btn {
-
-  background: transparent;
-  color: #F2F2F2;
-  margin-right: 30px;
-  margin-left: 15px;
-  margin-bottom: 10px;
-  text-decoration: none;
-
-  /* CSS Transition */
-  -webkit-transition: background .2s ease-in-out, border .2s ease-in-out;
-  -moz-transition: background .2s ease-in-out, border .2s ease-in-out;
-  -ms-transition: background .2s ease-in-out, border .2s ease-in-out;
-  -o-transition: background .2s ease-in-out, border .2s ease-in-out;
-  transition: background .2s ease-in-out, border .2s ease-in-out;
-  -webkit-border-radius: 0;
-  -moz-border-radius:    0;
-  border-radius:         0;
-
-}
-
-.doc {
-  font-size: 14px;
-  margin: 0; }
-  .doc:before,
-  .doc:after {
-    opacity: .2;
-    padding: 6px;
-    font-style: normal;
-    position: relative;
-    content: "•"; }
-  .doc a {
-    color: rgba(0, 0, 0, 0.3); }
-    .doc a:hover {
-      color: #666; }
-
-.welcome {
-  -webkit-animation-name: welcome;
-  -webkit-animation-duration: .9s; }
-
-@-webkit-keyframes welcome {
-  from {
-    -webkit-transform: scale(0);
-    opacity: 0;
-  }
-  50% {
-   -webkit-transform: scale(0);
-   opacity: 0;
-  }
-  82.5% {
-    -webkit-transform: scale(1.03);
-    -webkit-animation-timing-function: ease-out;
-    opacity: 1;
-  }
-  to {
-    -webkit-transform: scale(1);
-  }
-}
+@charset "utf-8";@import "bootstrap-sprockets";@import "bootstrap";@import "http://fonts.googleapis.com/css?family=Raleway:400,600";@import "font-awesome";@media only screen and (max-width: 767px){body{background:url("..images/sdbg_sm.jpg")}}body{font-family:sans-serif;background:url("../images/sdbg.jpg");background-position:center center;background-repeat:no-repeat;background-attachment:fixed;-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover}.no-bg-body{background:url("#");background-color:#FFF;background-position:center center;background-repeat:no-repeat;background-attachment:fixed;-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover}.color-bg{background:url("#");background-color:#FCFCFC;background-position:center center;background-repeat:no-repeat;background-attachment:fixed;-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover}.color-bg-2{background:url("#");background-color:#F1EEEE;background-position:center center;background-repeat:no-repeat;background-attachment:fixed;-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover}h1{color:#fff;font-family:'Raleway', sans-serif;text-align:center;font-weight:bold;font-size:54px;letter-spacing:-1px;text-shadow:0 1px 0 rgba(255, 255, 255, .5)}h2{color:#fff;font-family:'Raleway', sans-serif;text-align:center;font-weight:bold;font-size:25px;text-shadow:rgba(0,0,0,0.95) 1px 1px}h3{color:#fff;font-family:'Raleway', sans-serif;text-align:center;font-weight:bold;font-size:25px}h4{color:#000;font-family:'Raleway', sans-serif;text-align:center;font-weight:bold;font-size:25px}h5{color:#000;font-family:'Raleway', sans-serif;text-align:center;font-weight:bold;font-size:15px}h6{color:#000;font-family:'Raleway', sans-serif;font-weight:bold;font-size:35px;margin-top:145px}.title{color:#000;font-family:'Raleway', sans-serif;text-align:center;font-weight:bold;font-size:45px;padding-top:100px}header{background-color:#5199ce;color:#fff;font-family:'Raleway', sans-serif;font-size:30px;height:58px;width:100%;padding-left:50px;padding-top:10px}header a{color:#fff;text-decoration:none}header a:hover{color:#FFFFCC;text-decoration:none}p{font-size:18px;margin-left:250px;margin-right:250px}.row-margin{margin-top:100px;margin-bottom:100px}.about-p{font-size:16px;font-family:'Raleway', sans-serif;padding-right:200px}.about-r{font-size:16px;font-family:'Raleway', sans-serif;padding-right:100px;text-align:left}.about-l{font-size:16px;font-family:'Raleway', sans-serif;padding-left:75px;text-align:left}.about-img{margin-left:-15px}.app-img-l{margin-left:-50px}.app-img-r{margin-left:-5px}.blog-p{font-size:17px;font-family:'Raleway', sans-serif;padding-left:50px;padding-right:50px}aside{text-align:center}ol{text-align:center;list-style-position:inside}.links a{color:#fff;text-decoration:none}.links a:hover{color:#000;text-decoration:none}.navb{text-align:right;padding-right:240px;margin-top:12px}.navb a{color:#fff;text-decoration:none;font-size:20px;font-family:'Raleway', sans-serif;padding-right:15px}.navb a:hover{color:#000}.icons{padding-top:11px;padding-bottom:5px}.icons a{color:#000;padding-right:15px;text-decoration:none}.icons a:hover{color:#000}.about-ghost-button{display:inline-block;width:200px;padding:8px;color:#fff;border:1px solid #fff;text-align:center;outline:none;text-decoration:none}.btn{background:transparent;color:#F2F2F2;margin-right:30px;margin-left:15px;margin-bottom:10px;text-decoration:none;-webkit-transition:background .2s ease-in-out, border .2s ease-in-out;-moz-transition:background .2s ease-in-out, border .2s ease-in-out;-ms-transition:background .2s ease-in-out, border .2s ease-in-out;-o-transition:background .2s ease-in-out, border .2s ease-in-out;transition:background .2s ease-in-out, border .2s ease-in-out;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0}.doc{font-size:14px;margin:0}.doc:before,.doc:after{opacity:.2;padding:6px;font-style:normal;position:relative;content:"•"}.doc a{color:rgba(0, 0, 0, 0.3)}.doc a:hover{color:#666}.welcome{-webkit-animation-name:welcome;-webkit-animation-duration:.9s}@-webkit-keyframes "welcome"{from{-webkit-transform:scale(0);opacity:0;}50%{-webkit-transform:scale(0);opacity:0;}82.5%{-webkit-transform:scale(1.03);-webkit-animation-timing-function:ease-out;opacity:1;}to{-webkit-transform:scale(1);}}
