--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -6,11 +6,11 @@
     <div class="row">
       <div class="col-md-9 hidden-sm hidden-xs navb">
         <%= link_to 'Portfolio', 'portfolio.html' %>
-        <%= link_to 'Resume', 'docs/rsalter.resume.pdf' %></div>
+        <%= link_to 'Resume', 'docs/rsalter.resume.pdf', :target => "_blank" %></div>
       <div class="icons col-md-3 hidden-xs hidden-sm">
-      <a href="https://github.com/rachaelsalter"><i class="fa fa-github fa-2x"></i></a>
-     <a href="https://twitter.com/rachaelsalter"><i class="fa fa-twitter fa-2x"></i></a>
-      <a href="https://www.linkedin.com/in/rasalter"><i class="fa fa-linkedin fa-2x"></i></a>
+      <a href="https://github.com/rachaelsalter" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+     <a href="https://twitter.com/rachaelsalter" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+      <a href="https://www.linkedin.com/in/rasalter" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
       <a href="mailto:rasalter@gmail.com"><i class="fa fa-envelope fa-2x"></i></a></div>
  </div>   
    <h3>.</h3>
