--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,9 +4,9 @@
   
   <div class="row">
     <div class="col-xs-12 icons col-lg-3 col-lg-offset-9">
-      <a href="https://github.com/rachaelsalter"><i class="fa fa-github fa-2x"></i></a>
-      <a href="https://twitter.com/rachaelsalter"><i class="fa fa-twitter fa-2x"></i></a>
-      <a href="https://www.linkedin.com/in/rasalter"><i class="fa fa-linkedin fa-2x"></i></a>
+      <a href="https://github.com/rachaelsalter" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+      <a href="https://twitter.com/rachaelsalter" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+      <a href="https://www.linkedin.com/in/rasalter" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
       <a href="mailto:rasalter@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
    </div>
  </div>
@@ -33,7 +33,7 @@
       content_tag :link, link_to('Portfolio', 'portfolio.html') end %>
 
       <%= button size: :large  do
-      content_tag :link, link_to('Resume', '/docs/rsalter.resume.pdf') end %>
+      content_tag :link, link_to('Resume', '/docs/rsalter.resume.pdf', :target => "_blank") end %>
 
     </div>
    </div>
