fix NuLook title typo

--- a/source/portfolio.html.erb
+++ b/source/portfolio.html.erb
@@ -50,7 +50,7 @@
         <a href="http://nulookimprovements.com/" target="_blank"><%= image_tag 'imac_nulook.png' %></a></div>
     </div>
        <div class="col-md-6 col-sm-12 about-l">
-        <h6><a href="http://nulookimprovements.com/" target="_blank">NuLook Irovements</a></h6>
+        <h6><a href="http://nulookimprovements.com/" target="_blank">NuLook Improvements</a></h6>
         <strong><em>WordPress</em></strong></br></br>
         As Lead Developer I led the redesign of home improvement company website NuLookImprovements.com. WordPress theme selection, installation and customization using HTML & CSS; Created custom web banners with Slider Revolution plugin.  <br></br></div>
         
