update resume and about

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -24,7 +24,7 @@
    <h6>About Me</h6>
    I am a graduate of the <%= link_to 'FirehoseProject', 'http://www.thefirehoseproject.com/' %>, an online apprenticeship program that teaches full-stack web development. During my studies, I learned how to build web applications using the Ruby on Rails framework while focusing on fundamental computer programming concepts, algorithms, and data structures. 
    <br /><br />
-   My passion began many years ago with web design and evolved into a curiosity for how to "build stuff”. I love being immersed in the programming world and am seeking a Junior Developer opportunity.  I am dedicated to learning my craft and would love to contribute to a team while building upon my current skill set. I believe mentorship is essential to a programmer's development and an invaluable resource.
+   My passion began many years ago with web design and evolved into a curiosity for how to "build stuff”. I love being immersed in the programming world and am seeking a Web Developer opportunity. I am dedicated to learning my craft and would love to contribute to a team while building upon my current skill set. 
    <br /><br />
    When I am not committing to git, I enjoy adventure, diy projects, making avocado smoothies and of course, the beach. I am new to the San Diego area and am looking forward to making my mark. 
 </div>
